# hiver

./: .codecov.yml  .env.example  .gitignore  404.html  CHANGELOG.md  CLA.md  CLAUDE.md  CLAUDE_CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY  README.md  README.zh.md  book.toml  clippy.toml  deny.toml  index.html  print.html  publish_resume.sh  rustfmt.toml  searcher-09f2665d.js  searchindex-20df9491.js  searchindex-9cc28e6f.js  searchindex-9f6eb779.js  toc-2dff6247.js  toc-3ecb9f02.js  toc-5952c57e.js  toc.html
crates/hiver-actuator/: Cargo.toml  README.md
crates/hiver-actuator/src/: beans.rs  env.rs  health.rs  info.rs  lib.rs  loggers.rs  mappings.rs  metrics.rs  prelude.rs  routes.rs  tests.rs
crates/hiver-agent/: Cargo.toml  README.md
crates/hiver-agent/src/: agent.rs  chain.rs  lib.rs  prompt.rs  react.rs
crates/hiver-ai/: Cargo.toml  README.md
crates/hiver-ai/src/: anthropic.rs  chat_client.rs  chat_memory.rs  chat_model.rs  embedding.rs  lib.rs  memory.rs  ollama.rs  openai.rs  prompt.rs  rag.rs  tool.rs  vector_store.rs
crates/hiver-amqp/: Cargo.toml  README.md
crates/hiver-amqp/src/: ack.rs  binding.rs  config.rs  connection.rs  converter.rs  dead_letter.rs  exchange.rs  kafka.rs  lib.rs  listener.rs  message.rs  publisher.rs  queue.rs  rabbit_client.rs  tests.rs
crates/hiver-aop/: Cargo.toml  README.md
crates/hiver-aop-macros/: Cargo.toml  README.md
crates/hiver-aop-macros/src/: advice.rs  aspect.rs  lib.rs  pointcut.rs
crates/hiver-aop/examples/: logging_aspect.rs  logging_aspect.rs.disabled
crates/hiver-aop/src/: advice.rs  aspect.rs  lib.rs  pointcut.rs  runtime.rs  tests.rs
crates/hiver-aop/tests/: downstream_compile.rs
crates/hiver-async/: Cargo.toml  README.md
crates/hiver-async/src/: backpressure.rs  config.rs  error.rs  executor.rs  lib.rs  task.rs  tests.rs
crates/hiver-benches/: Cargo.toml  data_orm.rs  data_orm.rs.disabled  extractors.rs  extractors.rs.disabled  http_server.rs  http_server.rs.disabled  http_techpower.rs  http_techpower.rs.disabled  lib.rs  router.rs  router.rs.disabled  runtime_driver.rs  security.rs  security.rs.disabled
crates/hiver-benches/benches/: cloud_bus.rs  cloud_stream.rs  devtools.rs
crates/hiver-benches/src/: main.rs
crates/hiver-cache/: Cargo.toml  README.md
crates/hiver-cache/src/: cache.rs  cache_config.rs  cache_evict.rs  cache_manager.rs  cache_put.rs  cacheable.rs  caching.rs  condition_evaluator.rs  global_cache.rs  key_generator.rs  lib.rs  redis_cache.rs  redis_cache_manager.rs  resolver.rs
crates/hiver-cache/tests/: cache_conditions_test.rs
crates/hiver-cli/: Cargo.toml  README.md
crates/hiver-cli/src/: cli.rs  main.rs
crates/hiver-cloud-bus/: Cargo.toml
crates/hiver-cloud-bus/src/: bus.rs  error.rs  event.rs  lib.rs  local_bus.rs  stream_bus.rs
crates/hiver-cloud-stream/: Cargo.toml
crates/hiver-cloud-stream/src/: amqp_binder.rs  binder.rs  error.rs  kafka_binder.rs  lib.rs  message.rs
crates/hiver-data-commons/: Cargo.toml  README.md
crates/hiver-data-commons/src/: auditing.rs  data_rest.rs  entity.rs  error.rs  lib.rs  method_name.rs  optimistic_lock.rs  page.rs  part_tree.rs  projection.rs  propagation.rs  query.rs  repository.rs  sort.rs  specification.rs  tests.rs
crates/hiver-data-macros/: Cargo.toml  README.md
crates/hiver-data-macros/src/: lib.rs  tests.rs
crates/hiver-data-macros/tests/: model_macro_test.rs.disabled
crates/hiver-data-mongodb/: Cargo.toml  README.md
crates/hiver-data-mongodb/src/: aggregation.rs  bulk.rs  client.rs  error.rs  index.rs  lib.rs  projection.rs  query.rs  repository.rs  template.rs  tests.rs
crates/hiver-data-orm/: Cargo.toml  README.md
crates/hiver-data-orm/src/: active_record.rs  diesel.rs  error.rs  example.rs  executor.rs  lib.rs  mapper.rs  migrations.rs  mock_connection.rs  model.rs  projection.rs  query.rs  query_metadata.rs  query_runtime.rs  relationships.rs  repository.rs  sea_orm.rs  specification.rs  sqlx.rs  tests.rs
crates/hiver-data-rdbc/: Cargo.toml  README.md
crates/hiver-data-rdbc/src/: client.rs  config.rs  connection.rs  error.rs  executor.rs  lib.rs  pool.rs  row.rs  sql_builder.rs  tests.rs  transaction.rs  tx_bridge.rs
crates/hiver-data-redis/: Cargo.toml  README.md
crates/hiver-data-redis/src/: cache.rs  client.rs  error.rs  lib.rs  lock.rs  operations.rs  pipeline.rs  template.rs  tests.rs
crates/hiver-data-rest/: Cargo.toml
crates/hiver-data-rest/src/: lib.rs  resource.rs
crates/hiver-devtools/: Cargo.toml
crates/hiver-devtools/src/: error.rs  lib.rs  livereload.rs  profile.rs  rebuilder.rs  reloader.rs
crates/hiver-flyway/: Cargo.toml  README.md
crates/hiver-flyway/src/: config.rs  dialect.rs  (+6 more)
crates/hiver-graphql/: Cargo.toml  README.md
crates/hiver-hateoas/: Cargo.toml  README.md
crates/hiver-i18n/: Cargo.toml  README.md
crates/hiver-integration/: Cargo.toml  README.md
crates/hiver-kafka/: Cargo.toml  README.md
examples/: Cargo.toml  EXAMPLES.md  README.md  cache_example.rs  cache_with_conditions.rs  config_example.rs  grpc_service.rs  ioc_container_example.rs  jwt_auth_example.rs  logging_example.rs  microservice.rs  pre_authorize_example.rs  rest_api.rs  runtime_integration_example.rs  spring_boot_logging_demo.rs  spring_style_example.rs  transactional_example.rs  web3_dapp.rs
examples/runtime-chat-server/: Cargo.toml
examples/runtime-echo-server/: Cargo.toml
examples/runtime-timer-service/: Cargo.toml
examples/src/: annotated_app_example.rs  core_example.rs  http_example.rs  http_server_example.rs  logging_demo.rs  pre_auth_test.rs  resilience_example.rs  router_example.rs  starter_example.rs  stress_test.rs  techempower_benchmark.rs  validation_example.rs
fuzzers/: Cargo.toml  README.md
fuzzers/fuzz_targets/: http_request_parsing.rs
tests/: Cargo.toml  cross_crate_tests.rs  e2e_tests.rs  lib.rs
tests/data_integration/: helpers.rs  migration_tests.rs  mod.rs  model_tests.rs  query_tests.rs  repository_tests.rs
tests/integration/: kafka_tests.rs  mysql_tests.rs  postgres_tests.rs  rabbitmq_tests.rs  redis_tests.rs
(+11073 files in other folders)
