[package]
name = "hiver-examples"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

description = """
Example applications for Hiver Framework.
Hiver框架的示例应用。
Equivalent to: Spring Boot Samples, Spring PetClinic
"""

[lints]
workspace = true

# Binary targets / 二进制目标


[[bin]]
name = "core_example"
path = "src/core_example.rs"

[[bin]]
name = "http_example"
path = "src/http_example.rs"

[[bin]]
name = "router_example"
path = "src/router_example.rs"

[[bin]]
name = "resilience_example"
path = "src/resilience_example.rs"

[[bin]]
name = "validation_example"
path = "src/validation_example.rs"

[[bin]]
name = "pre_auth_test"
path = "src/pre_auth_test.rs"

[[bin]]
name = "starter_example"
path = "src/starter_example.rs"

[[bin]]
name = "logging_demo"
path = "src/logging_demo.rs"

[[bin]]
name = "techempower_benchmark"
path = "src/techempower_benchmark.rs"

[[bin]]
name = "stress_test"
path = "src/stress_test.rs"

[[bin]]
name = "http_server_example"
path = "src/http_server_example.rs"

[[bin]]
name = "annotated_app_example"
path = "src/annotated_app_example.rs"

[dependencies]
# Core framework / 核心框架
hiver-core = { path = "../crates/hiver-core" }
hiver-http = { path = "../crates/hiver-http", features = ["full"] }
hiver-router = { path = "../crates/hiver-router" }
hiver-resilience = { path = "../crates/hiver-resilience" }
hiver-validation = { path = "../crates/hiver-validation" }

# Hiver Starter / 自动配置启动器
hiver-starter = { path = "../crates/hiver-starter", features = ["core", "web"] }
hiver-macros = { path = "../crates/hiver-macros" }

# Observability / 可观测性
hiver-observability = { path = "../crates/hiver-observability", features = ["hiver-format"] }

# Cache / 缓存
hiver-cache = { path = "../crates/hiver-cache" }

# Security / 安全
hiver-security = { path = "../crates/hiver-security" }

# Data / 数据
hiver-data-annotations = { path = "../crates/hiver-data-annotations" }

# Web3 / 区块链
hiver-web3 = { path = "../crates/hiver-web3" }

# gRPC
hiver-grpc = { path = "../crates/hiver-grpc" }

# Async runtime / 异步运行时
hiver-runtime = { path = "../crates/hiver-runtime" }
inventory = "0.3"
tokio = { workspace = true, features = ["full"] }

# Serialization / 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Logging / 日志
env_logger = { workspace = true }
tracing = "0.1"

# Utilities / 工具
anyhow = { workspace = true }

# HTTP client for stress tests / 压力测试的 HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
