[package]
name = "hiver-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# Dependencies for fuzz targets
hiver-http = { path = "../crates/hiver-http" }
hiver-router = { path = "../crates/hiver-router" }
hiver-middleware = { path = "../crates/hiver-middleware" }
hiver-runtime = { path = "../crates/hiver-runtime" }

# Prevent dependency on workspace packages
[workspace]
