[package]
name = "hiver-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
# Integration tests that require Docker / 需要 Docker 的集成测试
integration-tests = []

[dev-dependencies]
# Hiver data crates
hiver-data-commons = { path = "../crates/hiver-data-commons" }
hiver-data-rdbc = { path = "../crates/hiver-data-rdbc", features = ["postgres", "mysql"] }
hiver-data-orm = { path = "../crates/hiver-data-orm" }
hiver-data-macros = { path = "../crates/hiver-data-macros" }

# Hiver core and cross-crate test targets
hiver-core = { path = "../crates/hiver-core" }
hiver-config = { path = "../crates/hiver-config" }
hiver-modulith = { path = "../crates/hiver-modulith" }
hiver-state-machine = { path = "../crates/hiver-state-machine" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Database
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Testcontainers for Docker-based integration tests / 基于 Docker 的集成测试容器
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis", "kafka", "rabbitmq"] }

# Redis client
redis = { version = "1.2", features = ["aio", "tokio-comp", "connection-manager"] }

# Kafka client
rdkafka = { version = "0.39", features = ["cmake-build", "tokio"] }

# AMQP/RabbitMQ client
lapin = "4.10"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# UUID
uuid = { version = "1.23", features = ["v4", "serde"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { workspace = true }

# Futures
futures = { workspace = true }

[[test]]
name = "data_integration"
path = "lib.rs"

[[test]]
name = "postgres_integration"
path = "integration/postgres_tests.rs"
required-features = ["integration-tests"]

[[test]]
name = "mysql_integration"
path = "integration/mysql_tests.rs"
required-features = ["integration-tests"]

[[test]]
name = "redis_integration"
path = "integration/redis_tests.rs"
required-features = ["integration-tests"]

[[test]]
name = "kafka_integration"
path = "integration/kafka_tests.rs"
required-features = ["integration-tests"]

[[test]]
name = "rabbitmq_integration"
path = "integration/rabbitmq_tests.rs"
required-features = ["integration-tests"]

[[test]]
name = "cross_crate"
path = "cross_crate_tests.rs"
