[package]
name = "hiver-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
AI Agent framework for Hiver - ReAct, chaining, routing, and tool-using agents.
Hiver的AI代理框架 - ReAct、链式、路由和工具使用代理。
Equivalent to: Spring AI Agents, LangChain Agents
"""
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hiver-ai = { path = "../hiver-ai" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
