[package]
name = "hiver-ai"
version = "0.1.0"
edition = "2021"
description = "Spring AI equivalent - AI integration for Hiver Framework"
# 中文描述: Spring AI 等价物 - Hiver 框架的 AI 集成

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockito = { workspace = true }

[lints]
workspace = true
