[package]
name = "hiver-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
AI integration for Hiver Framework with LLM providers, embeddings, and RAG.
Hiver框架的AI集成，支持LLM提供商、嵌入和RAG。
Equivalent to: Spring AI
"""
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockito = { workspace = true }

[lints]
workspace = true
