[package]
name = "hiver-aop"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Spring AOP style aspects for Hiver Framework.
Hiver框架的Spring AOP风格切面支持。
Equivalent to: Spring AOP, AspectJ
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
hiver-aop-macros = { path = "../hiver-aop-macros", version = "0.1.0-alpha.6" }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
trybuild = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
