[package]
name = "hiver-async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Async task execution framework for Hiver (equivalent to Spring @Async and TaskExecutor)"

[dependencies]
hiver-core = { path = "../hiver-core", version = "0.1.0-alpha.6" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12"
thiserror = "2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
