[package]
name = "hiver-benches"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
name = "hiver_benches"
path = "lib.rs"

[dependencies]
hiver-http = { path = "../hiver-http" }
hiver-runtime = { path = "../hiver-runtime" }
hiver-router = { path = "../hiver-router" }
hiver-extractors = { path = "../hiver-extractors" }
hiver-security = { path = "../hiver-security" }
hiver-data-orm = { path = "../hiver-data-orm" }
hiver-devtools = { path = "../hiver-devtools" }
hiver-cloud-bus = { path = "../hiver-cloud-bus", features = ["stream"] }
hiver-cloud-stream = { path = "../hiver-cloud-stream" }
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "devtools"
harness = false

[[bench]]
name = "cloud_bus"
harness = false

[[bench]]
name = "cloud_stream"
harness = false

# Benchmarks are disabled (files have .disabled suffix).
# Run `mv X.rs.disabled X.rs` to enable a specific benchmark.
# 基准测试已禁用（文件有 .disabled 后缀）。
# 运行 `mv X.rs.disabled X.rs` 启用特定基准测试。

# [[bench]]
# name = "http_server"
# harness = false
# path = "http_server.rs"

# [[bench]]
# name = "router"
# harness = false
# path = "router.rs"

# [[bench]]
# name = "extractors"
# harness = false
# path = "extractors.rs"

# [[bench]]
# name = "runtime_driver"
# harness = false
# path = "runtime_driver.rs"

# [[bench]]
# name = "http_techpower"
# harness = false
# path = "http_techpower.rs"

# [[bench]]
# name = "data_orm"
# harness = false
# path = "data_orm.rs"

# [[bench]]
# name = "security"
# harness = false
# path = "security.rs"
